--- a/pages/dong_co.html
+++ b/pages/dong_co.html
@@ -9,14 +9,14 @@
 
             <div class="video-lab">
                 <h2 class="title-lab">Cấu tạo động cơ phun xăng hiện đại</h2>
-                <div class="content-lab">
+                <div class="content-box">
                     <p>
-                        - puli trục khuỷu</br>
-                        - Trục cam</br>
-                        - van nạp xả</br>
-                        - puli máy bơm nước hệ thống làm mát</br>
-                        - puli máy phát</br>
-                        - puli máy điều hòa</br>
+                        - puli trục khuỷu
+                        - Trục cam
+                        - van nạp xả
+                        - puli máy bơm nước hệ thống làm mát
+                        - puli máy phát
+                        - puli máy điều hòa
                     </p>
 
                 </div>
@@ -26,7 +26,7 @@
 
             <div class="video-lab">
                 <h2 class="title-lab">Trục cam (camshaft)<h2>
-                        <div class="content-lab">
+                        <div class="content-box">
                         </div>
                         <iframe src="https://www.youtube.com/embed/JltyAGStsSU" allowfullscreen></iframe>
             </div>
@@ -39,9 +39,8 @@
                             allowfullscreen></iframe>
             </div>
 
-            <hr>
-            <img src="/imgs/image1.png">
-            <img src="/imgs/image2.png">
+            <img src="./imgs/dong_co/dong_co-01.png">
+            <img src="./imgs/dong_co/dong_co-02.png">
 
         </div>
 
