--- a/pages/he_thong_dien_than_xe.html
+++ b/pages/he_thong_dien_than_xe.html
@@ -1,128 +1,65 @@
-<div class="content-wrapper">
-    <div class="video-resource">
+<div class="header">
+    <div class="header-title">Hệ thống điện thân xe</div>
+    <!-- <button class="btn-nav" onclick="toggleRight()">Buổi học ☰</button> -->
+</div>
 
-        <div>
-            <h2>Tổng quan hệ thống</h2>
-            <div style="display:flex">
+<div class="page-content">
+    <div class="page-center-content">
+        <div class="slide-container">
+            <div class="video-lab">
+                <h2 class="title-lab">Tổng quan hệ thống</h2>
+                <div class="content-box">
+                </div>
                 <iframe src="https://www.youtube.com/embed/3PJxFAkI3is?list=PL4thAF2GC1yvQZlvviY5Ona0lxPwXoX9y"
                     allowfullscreen></iframe>
-
-                <div>
-                    <!-- <ul>
-                    <li>Cảm biến tốc độ động cơ, vị trí pitong</li>
-                    <li>Cảm biến lưu lượng gió</li>
-                    <li>Cảm biến vị trí bướm gas</li>
-                    <li>Cảm biến nước làm mát</li>
-                    <li>Cám biến oxy</li>
-                    <li>ECU</li>
-                    <li>bô bin đánh lửa</li>
-                </ul> -->
-                </div>
             </div>
-        </div>
 
-        <div>
-            <h2>Hệ thống chiếu sáng tự động </h2>
-            <div style="display:flex">
+
+            <div class="video-lab">
+                <h2 class="title-lab">Hệ thống chiếu sáng tự động </h2>
+                <div class="content-box">
+                </div>
                 <iframe src="https://www.youtube.com/embed/8Xq_Ju_S1V4?list=PL4thAF2GC1yvQZlvviY5Ona0lxPwXoX9y"
                     allowfullscreen></iframe>
-
-                <div>
-                    <!-- <ul>
-                    <li>Cảm biến tốc độ động cơ, vị trí pitong</li>
-                    <li>Cảm biến lưu lượng gió</li>
-                    <li>Cảm biến vị trí bướm gas</li>
-                    <li>Cảm biến nước làm mát</li>
-                    <li>Cám biến oxy</li>
-                    <li>ECU</li>
-                    <li>bô bin đánh lửa</li>
-                </ul> -->
-                </div>
             </div>
-        </div>
 
 
-        <div>
-            <h2>Đèn chiếu sáng</h2>
-            <div style="display:flex">
+            <div class="video-lab">
+                <h2 class="title-lab">Đèn chiếu sáng</h2>
+                <div class="content-box">
+                </div>
                 <iframe src="https://www.youtube.com/embed/tsAnEb1dVjU?list=PL4thAF2GC1yvQZlvviY5Ona0lxPwXoX9y"
                     allowfullscreen></iframe>
-
-                <div>
-                    <!-- <ul>
-                    <li>Cảm biến tốc độ động cơ, vị trí pitong</li>
-                    <li>Cảm biến lưu lượng gió</li>
-                    <li>Cảm biến vị trí bướm gas</li>
-                    <li>Cảm biến nước làm mát</li>
-                    <li>Cám biến oxy</li>
-                    <li>ECU</li>
-                    <li>bô bin đánh lửa</li>
-                </ul> -->
-                </div>
             </div>
-        </div>
 
-        <div>
-            <h2>Đèn chiếu sáng 2</h2>
-            <div style="display:flex">
+
+            <div class="video-lab">
+                <h2 class="title-lab">Đèn chiếu sáng 2</h2>
+                <div class="content-box">
+                </div>
                 <iframe src="https://www.youtube.com/embed/huOkDu2nyMs?list=PL4thAF2GC1yvQZlvviY5Ona0lxPwXoX9y"
                     allowfullscreen></iframe>
-
-                <div>
-                    <!-- <ul>
-                    <li>Cảm biến tốc độ động cơ, vị trí pitong</li>
-                    <li>Cảm biến lưu lượng gió</li>
-                    <li>Cảm biến vị trí bướm gas</li>
-                    <li>Cảm biến nước làm mát</li>
-                    <li>Cám biến oxy</li>
-                    <li>ECU</li>
-                    <li>bô bin đánh lửa</li>
-                </ul> -->
-                </div>
             </div>
-        </div>
 
-        <div>
-            <h2>Đèn chiếu sáng 3</h2>
-            <div style="display:flex">
+            <div class="video-lab">
+                <h2 class="title-lab">Đèn chiếu sáng 3</h2>
+                <div class="content-box">
+                </div>
                 <iframe src="https://www.youtube.com/embed/ukBm75TwBTQ?list=PL4thAF2GC1yvQZlvviY5Ona0lxPwXoX9y"
                     allowfullscreen></iframe>
-
-                <div>
-                    <!-- <ul>
-                    <li>Cảm biến tốc độ động cơ, vị trí pitong</li>
-                    <li>Cảm biến lưu lượng gió</li>
-                    <li>Cảm biến vị trí bướm gas</li>
-                    <li>Cảm biến nước làm mát</li>
-                    <li>Cám biến oxy</li>
-                    <li>ECU</li>
-                    <li>bô bin đánh lửa</li>
-                </ul> -->
-                </div>
             </div>
-        </div>
 
 
-        <div>
-            <h2>Cấu tạo đuôi đèn</h2>
-            <div style="display:flex">
+            <div class="video-lab">
+                <h2 class="title-lab">Cấu tạo đuôi đèn</h2>
+                <div class="content-box">
+                </div>
                 <iframe src="https://www.youtube.com/embed/SDRL75ZNA34?list=PL4thAF2GC1yvQZlvviY5Ona0lxPwXoX9y"
                     allowfullscreen></iframe>
-
-                <div>
-                    <!-- <ul>
-                    <li>Cảm biến tốc độ động cơ, vị trí pitong</li>
-                    <li>Cảm biến lưu lượng gió</li>
-                    <li>Cảm biến vị trí bướm gas</li>
-                    <li>Cảm biến nước làm mát</li>
-                    <li>Cám biến oxy</li>
-                    <li>ECU</li>
-                    <li>bô bin đánh lửa</li>
-                </ul> -->
-                </div>
             </div>
+
+
+
         </div>
-
-
     </div>
 </div>
