--- a/pages/he_thong_dieu_khien_dong_co.html
+++ b/pages/he_thong_dieu_khien_dong_co.html
@@ -1,127 +1,63 @@
-<div class="content-wrapper">
-    <div class="video-resource">
+<div class="header">
+    <div class="header-title">Hệ thống điều khiển động cơ và chuẩn đoán</div>
+    <!-- <button class="btn-nav" onclick="toggleRight()">Buổi học ☰</button> -->
+</div>
 
-        <div>
-            <h2>Hệ thống điều khiển động cơ</h2>
-            <div style="display:flex">
+<div class="page-content">
+    <div class="page-center-content">
+        <div class="slide-container">
+            <div class="video-lab">
+                <h2 class="title-lab">Hệ thống điều khiển động cơ</h2>
+                <div class="content-box">
+                </div>
                 <iframe src="https://www.youtube.com/embed/1PLT7B7bvJU?list=PL4thAF2GC1yvyqDgYQWmSr6_bR_EhBHJ9"
                     allowfullscreen></iframe>
-
-                <div>
-                    <!-- <ul>
-                    <li>Cảm biến tốc độ động cơ, vị trí pitong</li>
-                    <li>Cảm biến lưu lượng gió</li>
-                    <li>Cảm biến vị trí bướm gas</li>
-                    <li>Cảm biến nước làm mát</li>
-                    <li>Cám biến oxy</li>
-                    <li>ECU</li>
-                    <li>bô bin đánh lửa</li>
-                </ul> -->
-                </div>
             </div>
-        </div>
 
-        <div>
-            <h2>Cổng OBD</h2>
-            <div style="display:flex">
+            <div class="video-lab">
+                <h2 class="title-lab">Cổng OBD</h2>
+                <div class="content-box">
+                </div>
                 <iframe src="https://www.youtube.com/embed/ 2Zt5p-G-jQM?list=PL4thAF2GC1yvyqDgYQWmSr6_bR_EhBHJ9"
                     allowfullscreen></iframe>
-
-                <div>
-                    <!-- <ul>
-                    <li>Cảm biến tốc độ động cơ, vị trí pitong</li>
-                    <li>Cảm biến lưu lượng gió</li>
-                    <li>Cảm biến vị trí bướm gas</li>
-                    <li>Cảm biến nước làm mát</li>
-                    <li>Cám biến oxy</li>
-                    <li>ECU</li>
-                    <li>bô bin đánh lửa</li>
-                </ul> -->
-                </div>
             </div>
-        </div>
 
-        <div>
-            <h2>Xe khó khởi động ?</h2>
-            <div style="display:flex">
+            <div class="video-lab">
+                <h2 class="title-lab">Xe khó khởi động ?</h2>
+                <div class="content-box">
+                </div>
                 <iframe src="https://www.youtube.com/embed/neW_mhnSUys?list=PL4thAF2GC1yvyqDgYQWmSr6_bR_EhBHJ9"
                     allowfullscreen></iframe>
-
-                <div>
-                    <!-- <ul>
-                    <li>Cảm biến tốc độ động cơ, vị trí pitong</li>
-                    <li>Cảm biến lưu lượng gió</li>
-                    <li>Cảm biến vị trí bướm gas</li>
-                    <li>Cảm biến nước làm mát</li>
-                    <li>Cám biến oxy</li>
-                    <li>ECU</li>
-                    <li>bô bin đánh lửa</li>
-                </ul> -->
-                </div>
             </div>
-        </div>
 
 
-        <div>
-            <h2>Cách chẩn đoán, đọc lỗi qua cổng OBD II</h2>
-            <div style="display:flex">
+            <div class="video-lab">
+                <h2 class="title-lab">Cách chẩn đoán, đọc lỗi qua cổng OBD II</h2>
+                <div class="content-box">
+                </div>
                 <iframe src="https://www.youtube.com/embed/bhY66EbHRyQ?list=PL4thAF2GC1yvyqDgYQWmSr6_bR_EhBHJ9"
                     allowfullscreen></iframe>
-
-                <div>
-                    <!-- <ul>
-                    <li>Cảm biến tốc độ động cơ, vị trí pitong</li>
-                    <li>Cảm biến lưu lượng gió</li>
-                    <li>Cảm biến vị trí bướm gas</li>
-                    <li>Cảm biến nước làm mát</li>
-                    <li>Cám biến oxy</li>
-                    <li>ECU</li>
-                    <li>bô bin đánh lửa</li>
-                </ul> -->
-                </div>
             </div>
-        </div>
 
-        <div>
-            <h2>Cảm biến</h2>
-            <div style="display:flex">
+            <div class="video-lab">
+                <h2 class="title-lab">Cảm biến</h2>
+                <div class="content-box">
+                </div>
                 <iframe src="https://www.youtube.com/embed/92bZTCP-d3c?list=PL4thAF2GC1yvyqDgYQWmSr6_bR_EhBHJ9"
                     allowfullscreen></iframe>
-
-                <div>
-                    <!-- <ul>
-                    <li>Cảm biến tốc độ động cơ, vị trí pitong</li>
-                    <li>Cảm biến lưu lượng gió</li>
-                    <li>Cảm biến vị trí bướm gas</li>
-                    <li>Cảm biến nước làm mát</li>
-                    <li>Cám biến oxy</li>
-                    <li>ECU</li>
-                    <li>bô bin đánh lửa</li>
-                </ul> -->
-                </div>
             </div>
-        </div>
 
-        <div>
-            <h2>Cảm biến tốc độ , vị trí pittong</h2>
-            <div style="display:flex">
+
+            <div class="video-lab">
+                <h2 class="title-lab">Cảm biến tốc độ , vị trí pittong</h2>
+                <div class="content-box">
+                </div>
                 <iframe src="https://www.youtube.com/embed/GSuNmV7pChA?list=PL4thAF2GC1yvvvLtLqSDjyhlPWA5dHFeT"
                     allowfullscreen></iframe>
-
-                <div>
-                    <!-- <ul>
-                    <li>Cảm biến tốc độ động cơ, vị trí pitong</li>
-                    <li>Cảm biến lưu lượng gió</li>
-                    <li>Cảm biến vị trí bướm gas</li>
-                    <li>Cảm biến nước làm mát</li>
-                    <li>Cám biến oxy</li>
-                    <li>ECU</li>
-                    <li>bô bin đánh lửa</li>
-                </ul> -->
-                </div>
             </div>
+
+
+
         </div>
-
-
     </div>
 </div>
