--- a/pages/he_thong_phun_dau.html
+++ b/pages/he_thong_phun_dau.html
@@ -1,66 +1,38 @@
-<div class="content-wrapper">
-    <div class="video-resource">
+<div class="header">
+    <div class="header-title">Hệ thống phun dầu</div>
+    <!-- <button class="btn-nav" onclick="toggleRight()">Buổi học ☰</button> -->
+</div>
 
-        <div>
-            <h2>Hệ thống phun dầu- CRDI</h2>
-            <div style="display:flex">
+<div class="page-content">
+    <div class="page-center-content">
+        <div class="slide-container">
+            <div class="video-lab">
+                <h2 class="title-lab">Hệ thống phun dầu- CRDI</h2>
+                <div class="content-box">
+                </div>
                 <iframe src="https://www.youtube.com/embed/03RTQ0HzZ2g?list=PL4thAF2GC1ytZnSZOo3sHJAzITB11QhY8"
                     allowfullscreen></iframe>
-
-                <div>
-                    <!-- <ul>
-                    <li>Cảm biến tốc độ động cơ, vị trí pitong</li>
-                    <li>Cảm biến lưu lượng gió</li>
-                    <li>Cảm biến vị trí bướm gas</li>
-                    <li>Cảm biến nước làm mát</li>
-                    <li>Cám biến oxy</li>
-                    <li>ECU</li>
-                    <li>bô bin đánh lửa</li>
-                </ul> -->
-                </div>
             </div>
-        </div>
 
-
-        <div>
-            <h2>Hệ thống phun dầu - Nhiên liệu</h2>
-            <div style="display:flex">
+            <div class="video-lab">
+                <h2 class="title-lab">Hệ thống phun dầu - Nhiên liệu</h2>
+                <div class="content-box">
+                </div>
                 <iframe src="https://www.youtube.com/embed/qP6JWjeCls4?list=PL4thAF2GC1ytZnSZOo3sHJAzITB11QhY8"
                     allowfullscreen></iframe>
-
-                <div>
-                    <!-- <ul>
-                    <li>Cảm biến tốc độ động cơ, vị trí pitong</li>
-                    <li>Cảm biến lưu lượng gió</li>
-                    <li>Cảm biến vị trí bướm gas</li>
-                    <li>Cảm biến nước làm mát</li>
-                    <li>Cám biến oxy</li>
-                    <li>ECU</li>
-                    <li>bô bin đánh lửa</li>
-                </ul> -->
-                </div>
             </div>
-        </div>
 
-        <div>
-            <h2>Hệ thống phun dầu - Vòi phun</h2>
-            <div style="display:flex">
+
+            <div class="video-lab">
+                <h2 class="title-lab">Hệ thống phun dầu - Vòi phun</h2>
+                <div class="content-box">
+                </div>
                 <iframe src="https://www.youtube.com/embed/h5DeHgmdGfo?list=PL4thAF2GC1ytZnSZOo3sHJAzITB11QhY8"
                     allowfullscreen></iframe>
 
-                <div>
-                    <!-- <ul>
-                    <li>Cảm biến tốc độ động cơ, vị trí pitong</li>
-                    <li>Cảm biến lưu lượng gió</li>
-                    <li>Cảm biến vị trí bướm gas</li>
-                    <li>Cảm biến nước làm mát</li>
-                    <li>Cám biến oxy</li>
-                    <li>ECU</li>
-                    <li>bô bin đánh lửa</li>
-                </ul> -->
-                </div>
             </div>
-        </div>
 
+
+        </div>
     </div>
 </div>
