--- a/pages/he_thong_truyen_luc.html
+++ b/pages/he_thong_truyen_luc.html
@@ -1,146 +1,94 @@
-<div class="content-wrapper">
-    <div class="video-resource">
+<div class="header">
+    <div class="header-title">Hệ thống truyền lực</div>
+    <!-- <button class="btn-nav" onclick="toggleRight()">Buổi học ☰</button> -->
+</div>
 
-        <div>
-            <h2>Cấu tạo hệ thống truyền lực</h2>
-            <div style="display:flex">
+<div class="page-content">
+    <div class="page-center-content">
+        <div class="slide-container">
+            <div class="video-lab">
+                <h2 class="title-lab">Cấu tạo hệ thống truyền lực</h2>
+                <div class="content-box">
+                    <p>
+                        - Bộ ly hợp
+                        - Hộp số
+                        - Trục cardan
+                        - Cầu chủ động
+                        - Bộ vi sai
+                    </p>
+                </div>
                 <iframe src="https://www.youtube.com/embed/nszGISBUt34?list=PL4thAF2GC1ytZnSZOo3sHJAzITB11QhY8"
                     allowfullscreen></iframe>
-
-                <div>
-                    <ul>
-                        <li>Bộ ly hợp</li>
-                        <li>Hộp số</li>
-                        <li>Trục cardan</li>
-                        <li>Cầu chủ động</li>
-                        <li>Bộ vi sai</li>
-                    </ul>
-                </div>
             </div>
-        </div>
 
-
-        <div>
-            <h2>Hộp số thường</h2>
-            <div style="display:flex">
+            <div class="video-lab">
+                <h2 class="title-lab">Hộp số thường</h2>
+                <div class="content-box">
+                    <p>
+                        - Trục sơ cấp
+                        - Trục trung gian
+                        - Trục thứ cấp
+                        - Càng chuyển số
+                        - Bộ đồng tốc
+                        - Thanh chuyển số
+                    </p>
+                </div>
                 <iframe src="https://www.youtube.com/embed/pRi7tLq3TmY?list=PL4thAF2GC1ytZnSZOo3sHJAzITB11QhY8"
                     allowfullscreen></iframe>
-
-                <div>
-                    <ul>
-                        <li>Trục sơ cấp</li>
-                        <li>Trục trung gian</li>
-                        <li>Trục thứ cấp</li>
-                        <li>Càng chuyển số</li>
-                        <li>Bộ đồng tốc</li>
-                        <li>Thanh chuyển số</li>
-                    </ul>
-                </div>
             </div>
-        </div>
 
 
-
-        <div>
-            <h2>Tỉ số truyền Hộp số thường</h2>
-            <div style="display:flex">
+            <div class="video-lab">
+                <h2 class="title-lab">Tỉ số truyền Hộp số thường</h2>
+                <div class="content-box">
+                    <p>
+                        - Trục sơ cấp
+                        - Trục trung gian
+                        - Trục thứ cấp
+                        - Càng chuyển số
+                        - Bộ đồng tốc
+                        - Thanh chuyển số
+                    </p>
+                </div>
                 <iframe src="https://www.youtube.com/embed/bE2u7MwVIzA?list=PL4thAF2GC1ytZnSZOo3sHJAzITB11QhY8"
                     allowfullscreen></iframe>
-
-                <div>
-                    <ul>
-                        <li>Trục sơ cấp</li>
-                        <li>Trục trung gian</li>
-                        <li>Trục thứ cấp</li>
-                        <li>Càng chuyển số</li>
-                        <li>Bộ đồng tốc</li>
-                        <li>Thanh chuyển số</li>
-                    </ul>
-                </div>
             </div>
-        </div>
 
 
-        <div>
-            <h2>Cấu tạo hộp số tự động</h2>
-            <div style="display:flex">
+            <div class="video-lab">
+                <h2 class="title-lab">Cấu tạo hộp số tự động</h2>
+                <div class="content-box">
+                </div>
                 <iframe src="https://www.youtube.com/embed/rNUSbsy-i5s?list=PL4thAF2GC1ytZnSZOo3sHJAzITB11QhY8"
                     allowfullscreen></iframe>
 
-                <div>
-                    <ul>
-                        <li>Bộ biến mô thủy lực/li>
-                            <!-- <li>Trục trung gian</li>
-                    <li>Trục thứ cấp</li>
-                    <li>Càng chuyển số</li>
-                    <li>Bộ đồng tốc</li>
-                    <li>Thanh chuyển số</li> -->
-                    </ul>
-                </div>
             </div>
-        </div>
 
-
-
-        <div>
-            <h2>Những hư hỏng ở hộp số tự động</h2>
-            <div style="display:flex">
+            <div class="video-lab">
+                <h2 class="title-lab">Những hư hỏng ở hộp số tự động</h2>
+                <div class="content-box">
+                </div>
                 <iframe src="https://www.youtube.com/embed/u_xOSsa-Ijw?list=PL4thAF2GC1ytZnSZOo3sHJAzITB11QhY8"
                     allowfullscreen></iframe>
-
-                <div>
-                    <ul>
-                        <!-- <li>Bộ biến mô thủy lực/li>
-                    <li>Trục trung gian</li>
-                    <li>Trục thứ cấp</li>
-                    <li>Càng chuyển số</li>
-                    <li>Bộ đồng tốc</li>
-                    <li>Thanh chuyển số</li> -->
-                    </ul>
-                </div>
             </div>
-        </div>
 
 
-        <div>
-            <h2>Hộp số ngang 2 trục, cầu trước chủ động</h2>
-            <div style="display:flex">
+            <div class="video-lab">
+                <h2 class="title-lab">Hộp số ngang 2 trục, cầu trước chủ động</h2>
+                <div class="content-box">
+                </div>
                 <iframe src="https://www.youtube.com/embed/dIfeXTpBKbI?list=PL4thAF2GC1ytZnSZOo3sHJAzITB11QhY8"
                     allowfullscreen></iframe>
-
-                <div>
-                    <ul>
-                        <!-- <li>Bộ biến mô thủy lực/li>
-                    <li>Trục trung gian</li>
-                    <li>Trục thứ cấp</li>
-                    <li>Càng chuyển số</li>
-                    <li>Bộ đồng tốc</li>
-                    <li>Thanh chuyển số</li> -->
-                    </ul>
-                </div>
             </div>
-        </div>
 
-        <div>
-            <h2>Bộ biến mô thủy lực</h2>
-            <div style="display:flex">
+            <div class="video-lab">
+                <h2 class="title-lab">Bộ biến mô thủy lực</h2>
+                <div class="content-box">
+                </div>
                 <iframe src="https://www.youtube.com/embed/uR3J8qW-IiM?list=PL4thAF2GC1ytZnSZOo3sHJAzITB11QhY8"
                     allowfullscreen></iframe>
-
-                <div>
-                    <ul>
-                        <!-- <li>Bộ biến mô thủy lực/li>
-                    <li>Trục trung gian</li>
-                    <li>Trục thứ cấp</li>
-                    <li>Càng chuyển số</li>
-                    <li>Bộ đồng tốc</li>
-                    <li>Thanh chuyển số</li> -->
-                    </ul>
-                </div>
             </div>
+
         </div>
-
-
-
     </div>
 </div>
