--- a/pages/dong_co_phun_dau_dien_tu.html
+++ b/pages/dong_co_phun_dau_dien_tu.html
@@ -1,19 +1,18 @@
-<div class="content-wrapper">
-    <h2>Động cơ phun dầu điện tử</h2>
-    <div style="display:flex">
-        <iframe src="https://www.youtube.com/embed/SaDSeziLtWk?list=PL4thAF2GC1ytZnSZOo3sHJAzITB11QhY8"
-            allowfullscreen></iframe>
+<div class="header">
+    <div class="header-title">Động cơ phun dầu điện tử</div>
+    <!-- <button class="btn-nav" onclick="toggleRight()">Buổi học ☰</button> -->
+</div>
 
-        <div>
-            <!-- <ul>
-                    <li>Cảm biến tốc độ động cơ, vị trí pitong</li>
-                    <li>Cảm biến lưu lượng gió</li>
-                    <li>Cảm biến vị trí bướm gas</li>
-                    <li>Cảm biến nước làm mát</li>
-                    <li>Cám biến oxy</li>
-                    <li>ECU</li>
-                    <li>bô bin đánh lửa</li>
-                </ul> -->
+<div class="page-content">
+    <div class="page-center-content">
+        <div class="slide-container">
+            <div class="video-lab">
+                <h2 class="title-lab">Động cơ phun dầu điện tử</h2>
+                <div class="content-box">
+                </div>
+                <iframe src="https://www.youtube.com/embed/SaDSeziLtWk?list=PL4thAF2GC1ytZnSZOo3sHJAzITB11QhY8"
+                    allowfullscreen></iframe>
+            </div>
         </div>
     </div>
 </div>
