--- a/pages/he_thong_danh_lua.html
+++ b/pages/he_thong_danh_lua.html
@@ -1,106 +1,53 @@
-<div class="content-wrapper">
+<div class="header">
+    <div class="header-title">Hệ thống đánh lửa</div>
+    <!-- <button class="btn-nav" onclick="toggleRight()">Buổi học ☰</button> -->
+</div>
 
-    <div class="video-resource">
-
-        <div>
-            <h2>Hệ thống đánh lửa</h2>
-            <div style="display:flex">
+<div class="page-content">
+    <div class="page-center-content">
+        <div class="slide-container">
+            <div class="video-lab">
+                <h2 class="title-lab">Hệ thống đánh lửa</h2>
+                <div class="content-box">
+                    <p>
+                        - Cảm biến tốc độ động cơ, vị trí pitong
+                        - Cảm biến lưu lượng gió
+                        - Cảm biến vị trí bướm gas
+                        - Cảm biến nước làm mát
+                        - Cám biến oxy
+                        - ECU
+                        - bô bin đánh lửa
+                    </p>
+                </div>
                 <iframe src="https://www.youtube.com/embed/wJmw_8Id6QI?list=PL4thAF2GC1ytZnSZOo3sHJAzITB11QhY8"
                     allowfullscreen></iframe>
-
-                <div>
-                    <ul>
-                        <li>Cảm biến tốc độ động cơ, vị trí pitong</li>
-                        <li>Cảm biến lưu lượng gió</li>
-                        <li>Cảm biến vị trí bướm gas</li>
-                        <li>Cảm biến nước làm mát</li>
-                        <li>Cám biến oxy</li>
-                        <li>ECU</li>
-                        <li>bô bin đánh lửa</li>
-                    </ul>
-                </div>
             </div>
-        </div>
 
-        <div>
-            <h2>Hệ thống đánh lửa sử dụng bộ chia điện</h2>
-            <div style="display:flex">
+            <div class="video-lab">
+                <h2 class="title-lab">Hệ thống đánh lửa sử dụng bộ chia điện</h2>
+                <div class="content-box">
+                </div>
                 <iframe src="https://www.youtube.com/embed/MTFx38DrUHg?list=PL4thAF2GC1ytZnSZOo3sHJAzITB11QhY8"
                     allowfullscreen></iframe>
             </div>
-        </div>
 
 
-        <div>
-            <h2>Hệ thống đánh lửa sử dụng bô bin đôi (Double Spark Ingition)</h2>
-            <div style="display:flex">
+            <div class="video-lab">
+                <h2 class="title-lab">Hệ thống đánh lửa sử dụng bô bin đôi (Double Spark Ingition)</h2>
+                <div class="content-box">
+                    <p>
+                        - ECU
+                        - 2 bô bin đôi
+                        - bugi
+                        - Cảm biến tốc độ trục khuỷu,vị trí trục khuỷu (cảm biến điện từ)
+                    </p>
+                </div>
                 <iframe src="https://www.youtube.com/embed/YBerjPy4QDA?list=PL4thAF2GC1ytZnSZOo3sHJAzITB11QhY8"
                     allowfullscreen></iframe>
-                <div>
-                    <ul>
-                        <li>ECU</li>
-                        <li>2 bô bin đôi</li>
-                        <li>bugi</li>
-                        <li>Cảm biến tốc độ trục khuỷu,vị trí trục khuỷu (cảm biến điện từ)</li>
-                    </ul>
-                </div>
             </div>
 
 
-        </div>
 
-
-
-
-        <!-- <div>
-        <h2>Cấu tạo máy khởi động</h2>
-        <div style="display:flex">
-            <iframe src="https://www.youtube.com/embed/96_SI4YKYxs?list=PL4thAF2GC1ytZnSZOo3sHJAzITB11QhY8"
-                allowfullscreen></iframe>
         </div>
     </div>
-
-
-    <div>
-        <h2>Sơ đồ mạch máy khởi động</h2>
-        <div style="display:flex">
-            <iframe src="https://www.youtube.com/embed/4Odfl2nxF_M?list=PL4thAF2GC1ytZnSZOo3sHJAzITB11QhY8"
-                allowfullscreen></iframe>
-        </div>
-    </div>
-
-    <div>
-        <h2>Đấu nối mạch khởi động</h2>
-        <div style="display:flex">
-            <iframe src="https://www.youtube.com/embed/hjX3kRCeEAA?list=PL4thAF2GC1ytZnSZOo3sHJAzITB11QhY8"
-                allowfullscreen></iframe>
-            <div>
-                <ul>
-                    <li>Máy khởi động</li>
-                    <li>Công tắc đề (P,IG,ST)</li>
-                    <li>Rờ le 4 chân</li>
-                    <li>Công tắc hộp số (P,N mới đề)</li>
-                    <li>Đèn báo hiệu có nguồn cung cấp hệ thống phun xăng đánh lửa</li>
-                </ul>
-            </div>
-        </div>
-    </div> -->
-
-        <div>
-            <!-- <h2>Trục cam (camshaft)</h2>
-        <iframe src="https://www.youtube.com/embed/JltyAGStsSU" allowfullscreen></iframe> -->
-        </div>
-
-        <div>
-            <!-- <h2>Van nạp xả</h2>
-        <iframe src="https://www.youtube.com/embed/LEY--IM7EOI?si=icA0exh1Uqq74FJn" allowfullscreen></iframe> -->
-        </div>
-
-    </div>
-
-    <div class="image-resource">
-        <!-- <img src="/imgs/image1.png">
-    <img src="/imgs/image2.png"> -->
-    </div>
-
 </div>
