--- a/pages/he_thong_khoi_dong.html
+++ b/pages/he_thong_khoi_dong.html
@@ -1,62 +1,42 @@
-<div class="content-wrapper">
-    <div class="video-resource">
+<div class="header">
+    <div class="header-title">Hệ thống khởi động</div>
+    <!-- <button class="btn-nav" onclick="toggleRight()">Buổi học ☰</button> -->
+</div>
 
-        <div>
-            <h2>Hệ thống khởi động</h2>
-            <div style="display:flex">
+<div class="page-content">
+    <div class="page-center-content">
+        <div class="slide-container">
+            <div class="video-lab">
+                <h2 class="title-lab">Hệ thống khởi động</h2>
+                <div class="content-box">
+                </div>
                 <iframe src="https://www.youtube.com/embed/tZrbhpskoOM?list=PL4thAF2GC1ytZnSZOo3sHJAzITB11QhY8"
                     allowfullscreen></iframe>
             </div>
-        </div>
 
-        <div>
-            <h2>Cấu tạo máy khởi động</h2>
-            <div style="display:flex">
-                <iframe src="https://www.youtube.com/embed/96_SI4YKYxs?list=PL4thAF2GC1ytZnSZOo3sHJAzITB11QhY8"
-                    allowfullscreen></iframe>
-            </div>
-        </div>
-
-
-        <div>
-            <h2>Sơ đồ mạch máy khởi động</h2>
-            <div style="display:flex">
+            <div class="video-lab">
+                <h2 class="title-lab">Sơ đồ mạch máy khởi động</h2>
+                <div class="content-box">
+                </div>
                 <iframe src="https://www.youtube.com/embed/4Odfl2nxF_M?list=PL4thAF2GC1ytZnSZOo3sHJAzITB11QhY8"
                     allowfullscreen></iframe>
             </div>
-        </div>
 
-        <div>
-            <h2>Đấu nối mạch khởi động</h2>
-            <div style="display:flex">
+            <div class="video-lab">
+                <h2 class="title-lab">Đấu nối mạch khởi động</h2>
+                <div class="content-box">
+                    <p>
+                        - Máy khởi động
+                        - Công tắc đề (P,IG,ST)
+                        - Rờ le 4 chân
+                        - Công tắc hộp số (P,N mới đề)
+                        - Đèn báo hiệu có nguồn cung cấp hệ thống phun xăng đánh lửa
+                    </p>
+                </div>
                 <iframe src="https://www.youtube.com/embed/hjX3kRCeEAA?list=PL4thAF2GC1ytZnSZOo3sHJAzITB11QhY8"
                     allowfullscreen></iframe>
-                <div>
-                    <ul>
-                        <li>Máy khởi động</li>
-                        <li>Công tắc đề (P,IG,ST)</li>
-                        <li>Rờ le 4 chân</li>
-                        <li>Công tắc hộp số (P,N mới đề)</li>
-                        <li>Đèn báo hiệu có nguồn cung cấp hệ thống phun xăng đánh lửa</li>
-                    </ul>
-                </div>
             </div>
+
         </div>
-
-        <div>
-            <!-- <h2>Trục cam (camshaft)</h2>
-        <iframe src="https://www.youtube.com/embed/JltyAGStsSU" allowfullscreen></iframe> -->
-        </div>
-
-        <div>
-            <!-- <h2>Van nạp xả</h2>
-        <iframe src="https://www.youtube.com/embed/LEY--IM7EOI?si=icA0exh1Uqq74FJn" allowfullscreen></iframe> -->
-        </div>
-
-    </div>
-
-    <div class="image-resource">
-        <!-- <img src="/imgs/image1.png">
-    <img src="/imgs/image2.png"> -->
     </div>
 </div>
