--- a/pages/he_thong_lai_tro_luc.html
+++ b/pages/he_thong_lai_tro_luc.html
@@ -1,45 +1,30 @@
-<div class="content-wrapper">
-    <div class="video-resource">
+<div class="header">
+    <div class="header-title">Hệ thống lái trợ lực</div>
+    <!-- <button class="btn-nav" onclick="toggleRight()">Buổi học ☰</button> -->
+</div>
 
-        <div>
-            <h2>Hệ thống trợ lực</h2>
-            <div style="display:flex">
+<div class="page-content">
+    <div class="page-center-content">
+        <div class="slide-container">
+            <div class="video-lab">
+                <h2 class="title-lab">Hệ thống trợ lực</h2>
+                <div class="content-box">
+                </div>
                 <iframe src="https://www.youtube.com/embed/6W9QEB5CZRE?list=PL4thAF2GC1ytZnSZOo3sHJAzITB11QhY8"
                     allowfullscreen></iframe>
-
-                <div>
-                    <!-- <ul>
-                    <li>Cảm biến tốc độ động cơ, vị trí pitong</li>
-                    <li>Cảm biến lưu lượng gió</li>
-                    <li>Cảm biến vị trí bướm gas</li>
-                    <li>Cảm biến nước làm mát</li>
-                    <li>Cám biến oxy</li>
-                    <li>ECU</li>
-                    <li>bô bin đánh lửa</li>
-                </ul> -->
-                </div>
             </div>
-        </div>
 
-        <div>
-            <h2>Thông số hệ thống trợ trợ lực</h2>
-            <div style="display:flex">
+            <div class="video-lab">
+                <h2 class="title-lab">Thông số hệ thống trợ trợ lực</h2>
+                <div class="content-box">
+                </div>
                 <iframe src="https://www.youtube.com/embed/VRzY8jXmrAU?list=PL4thAF2GC1ytZnSZOo3sHJAzITB11QhY8"
                     allowfullscreen></iframe>
 
-                <div>
-                    <!-- <ul>
-                    <li>Cảm biến tốc độ động cơ, vị trí pitong</li>
-                    <li>Cảm biến lưu lượng gió</li>
-                    <li>Cảm biến vị trí bướm gas</li>
-                    <li>Cảm biến nước làm mát</li>
-                    <li>Cám biến oxy</li>
-                    <li>ECU</li>
-                    <li>bô bin đánh lửa</li>
-                </ul> -->
-                </div>
             </div>
-        </div>
 
+
+
+        </div>
     </div>
 </div>
