--- a/pages/he_thong_lam_mat.html
+++ b/pages/he_thong_lam_mat.html
@@ -1,62 +1,34 @@
-<div class="content-wrapper">
-    <div class="video-resource">
+<div class="header">
+    <div class="header-title">Hệ thống làm mát</div>
+    <!-- <button class="btn-nav" onclick="toggleRight()">Buổi học ☰</button> -->
+</div>
 
-        <div>
-            <h2>Hệ thống làm mát động cơ</h2>
-            <div style="display:flex">
+<div class="page-content">
+    <div class="page-center-content">
+        <div class="slide-container">
+            <div class="video-lab">
+                <h2 class="title-lab">Hệ thống làm mát động cơ</h2>
+                <div class="content-box">
+                </div>
                 <iframe src="https://www.youtube.com/embed/ioo2BQE98wE" allowfullscreen></iframe>
-
-                <div>
-                    <!-- <ul>
-                    <li>Cảm biến tốc độ động cơ, vị trí pitong</li>
-                    <li>Cảm biến lưu lượng gió</li>
-                    <li>Cảm biến vị trí bướm gas</li>
-                    <li>Cảm biến nước làm mát</li>
-                    <li>Cám biến oxy</li>
-                    <li>ECU</li>
-                    <li>bô bin đánh lửa</li>
-                </ul> -->
-                </div>
             </div>
-        </div>
 
-        <div>
-            <h2>Dung dịch nước làm mát- điểm sôi</h2>
-            <div style="display:flex">
+            <div class="video-lab">
+                <h2 class="title-lab">Dung dịch nước làm mát- điểm sôi</h2>
+                <div class="content-box">
+                </div>
                 <iframe src="https://www.youtube.com/embed/2E_NqhdWct0" allowfullscreen></iframe>
-
-                <div>
-                    <!-- <ul>
-                    <li>Cảm biến tốc độ động cơ, vị trí pitong</li>
-                    <li>Cảm biến lưu lượng gió</li>
-                    <li>Cảm biến vị trí bướm gas</li>
-                    <li>Cảm biến nước làm mát</li>
-                    <li>Cám biến oxy</li>
-                    <li>ECU</li>
-                    <li>bô bin đánh lửa</li>
-                </ul> -->
-                </div>
             </div>
-        </div>
 
 
-        <div>
-            <h2>Dung dịch nước làm mát - điểm đóng băng</h2>
-            <div style="display:flex">
+            <div class="video-lab">
+                <h2 class="title-lab">Dung dịch nước làm mát - điểm đóng băng</h2>
+                <div class="content-box">
+                </div>
                 <iframe src="https://www.youtube.com/embed/pdkxD0FUUhc" allowfullscreen></iframe>
 
-                <div>
-                    <!-- <ul>
-                    <li>Cảm biến tốc độ động cơ, vị trí pitong</li>
-                    <li>Cảm biến lưu lượng gió</li>
-                    <li>Cảm biến vị trí bướm gas</li>
-                    <li>Cảm biến nước làm mát</li>
-                    <li>Cám biến oxy</li>
-                    <li>ECU</li>
-                    <li>bô bin đánh lửa</li>
-                </ul> -->
-                </div>
             </div>
+
         </div>
     </div>
 </div>
