--- a/pages/he_thong_phanh.html
+++ b/pages/he_thong_phanh.html
@@ -1,82 +1,43 @@
-<div class="content-wrapper">
-    <div class="video-resource">
+<div class="header">
+    <div class="header-title">Hệ thống phanh</div>
+    <!-- <button class="btn-nav" onclick="toggleRight()">Buổi học ☰</button> -->
+</div>
 
-        <div>
-            <h2>Cấu tạo hệ thống phanh thủy lực</h2>
-            <div style="display:flex">
+<div class="page-content">
+    <div class="page-center-content">
+        <div class="slide-container">
+            <div class="video-lab">
+                <h2 class="title-lab">Cấu tạo hệ thống phanh thủy lực</h2>
+                <div class="content-box">
+                </div>
                 <iframe src="https://www.youtube.com/embed/7gTtc5oADxs?t=48s" allowfullscreen></iframe>
-
-                <div>
-                    <!-- <ul>
-                    <li>Cảm biến tốc độ động cơ, vị trí pitong</li>
-                    <li>Cảm biến lưu lượng gió</li>
-                    <li>Cảm biến vị trí bướm gas</li>
-                    <li>Cảm biến nước làm mát</li>
-                    <li>Cám biến oxy</li>
-                    <li>ECU</li>
-                    <li>bô bin đánh lửa</li>
-                </ul> -->
-                </div>
             </div>
-        </div>
 
-        <div>
-            <h2>Cấu tạo hệ thống phanh khí nén</h2>
-            <div style="display:flex">
+            <div class="video-lab">
+                <h2 class="title-lab">Cấu tạo hệ thống phanh khí nén</h2>
+                <div class="content-box">
+                </div>
                 <iframe src="https://www.youtube.com/embed/3QqIk_iUpqE" allowfullscreen></iframe>
-
-                <div>
-                    <!-- <ul>
-                    <li>Cảm biến tốc độ động cơ, vị trí pitong</li>
-                    <li>Cảm biến lưu lượng gió</li>
-                    <li>Cảm biến vị trí bướm gas</li>
-                    <li>Cảm biến nước làm mát</li>
-                    <li>Cám biến oxy</li>
-                    <li>ECU</li>
-                    <li>bô bin đánh lửa</li>
-                </ul> -->
-                </div>
             </div>
-        </div>
 
-        <div>
-            <h2>Hoạt động của hệ thống phanh khí nén</h2>
-            <div style="display:flex">
+
+            <div class="video-lab">
+                <h2 class="title-lab">Hoạt động của hệ thống phanh khí nén</h2>
+                <div class="content-box">
+                </div>
                 <iframe src="https://www.youtube.com/embed/iNx0fqK54ts" allowfullscreen></iframe>
 
-                <div>
-                    <!-- <ul>
-                    <li>Cảm biến tốc độ động cơ, vị trí pitong</li>
-                    <li>Cảm biến lưu lượng gió</li>
-                    <li>Cảm biến vị trí bướm gas</li>
-                    <li>Cảm biến nước làm mát</li>
-                    <li>Cám biến oxy</li>
-                    <li>ECU</li>
-                    <li>bô bin đánh lửa</li>
-                </ul> -->
-                </div>
             </div>
-        </div>
 
-        <div>
-            <h2>Dầu phanh</h2>
-            <div style="display:flex">
+
+            <div class="video-lab">
+                <h2 class="title-lab">Dầu phanh</h2>
+                <div class="content-box">
+                </div>
                 <iframe src="https://www.youtube.com/embed/Um1Cwiru5IU" allowfullscreen></iframe>
-
-                <div>
-                    <!-- <ul>
-                    <li>Cảm biến tốc độ động cơ, vị trí pitong</li>
-                    <li>Cảm biến lưu lượng gió</li>
-                    <li>Cảm biến vị trí bướm gas</li>
-                    <li>Cảm biến nước làm mát</li>
-                    <li>Cám biến oxy</li>
-                    <li>ECU</li>
-                    <li>bô bin đánh lửa</li>
-                </ul> -->
-                </div>
             </div>
+
+
         </div>
-
-
     </div>
 </div>
