--- a/pages/van_egr.html
+++ b/pages/van_egr.html
@@ -1,25 +1,18 @@
-<div class="video-resource">
+<div class="header">
+    <div class="header-title">Van tuần hoàn khí xả</div>
+    <!-- <button class="btn-nav" onclick="toggleRight()">Buổi học ☰</button> -->
+</div>
 
-    <div>
-        <h2>Van EGR - Exhaust Gas Recirculation </h2>
-        <div style="display:flex">
-            <iframe src="https://www.youtube.com/embed/ZxgeIQT8nrQ?list=PL4thAF2GC1ytZnSZOo3sHJAzITB11QhY8"
-                allowfullscreen></iframe>
-
-            <div>
-                <!-- <ul>
-                    <li>Cảm biến tốc độ động cơ, vị trí pitong</li>
-                    <li>Cảm biến lưu lượng gió</li>
-                    <li>Cảm biến vị trí bướm gas</li>
-                    <li>Cảm biến nước làm mát</li>
-                    <li>Cám biến oxy</li>
-                    <li>ECU</li>
-                    <li>bô bin đánh lửa</li>
-                </ul> -->
+<div class="page-content">
+    <div class="page-center-content">
+        <div class="slide-container">
+            <div class="video-lab">
+                <h2 class="title-lab">Van EGR - Exhaust Gas Recirculation </h2>
+                <div class="content-box">
+                </div>
+                <iframe src="https://www.youtube.com/embed/ZxgeIQT8nrQ?list=PL4thAF2GC1ytZnSZOo3sHJAzITB11QhY8"
+                    allowfullscreen></iframe>
             </div>
         </div>
     </div>
-
-
-
 </div>
