--- a/pages/vi_dieu_khien.html
+++ b/pages/vi_dieu_khien.html
@@ -1,6 +1,11 @@
 <!-- <h2 class="vdk-header">Vi điều khiển ô tô</h2> -->
 
 <div class="header">
+    <a href="#" target="_blank" class="ai-btn-dark">
+        <span class="ai-glow"></span>
+        <span class="ai-circle">AI</span>
+        <span class="ai-text">Trợ lý buổi học</span>
+    </a>
     <div class="header-title">Vi điều khiên ô tô</div>
     <button class="btn-nav" onclick="toggleRight()">Buổi học ☰</button>
 </div>
