--- a/pages/vi_dieu_khien.html
+++ b/pages/vi_dieu_khien.html
@@ -52,6 +52,7 @@
                     <li>4. Biến và khối gán</li>
                     <li>5. Câu điều kiện và khối ra quyết định</li>
                     <li>6. Vòng lặp và khối lặp</li>
+                    <li>7. Hàm và khối sự kiện/chương trình con</li>
                 </ul>
             </li>
         </ul>
